--- a/index.html
+++ b/index.html
@@ -17,50 +17,51 @@
         <div class="main-content-section">
             <!-- about me -->
             <div class="about-me-section">
-                <h2 class="about-me-profession">Full-Stack Developer</h2>
-                <h1 class="about-me-name">Maxim Tumoshenko</h1>
+                <h2 class="about-me-profession">Front-End Розробник</h2>
+                <h1 class="about-me-name">Максим Тимошенко</h1>
                 <p class="about-me-description">
-                    I am a Junior Full-Stack developer. I focus on HTML5, CSS3, JS, React. English — Intermediate.
-                    Development, practice and work for the result are important for me. I intend to develop innovative technologies and deliver value to people.
+                    Я Junior Front-End розробник. Я зосереджуюсь на HTML5, CSS3, JS, React. Англійська — Intermediate.
+                    Для мене важливий розвиток, практика і робота на результат. Я маю намір розвивати інноваційні технології та приносити
+                    користь людям.
                 </p>
             </div>
 
 
             <!-- my work experience-->
             <div class="my-work-experience">
-                <h3 class="main-content-title">Work Experience</h3>
+                <h3 class="main-content-title">Досвід роботи</h3>
                 <!-- company 1-->
                 <div class="my-work-experience-company-block">
-                    <h4 class="my-work-experience-position">Call center operator <span class="my-work-experience-company">"Proxima Research International"</span></h4>
-                    <p class="my-work-experience-period">July 2020 - April 2021 <span class="my-work-experience-divider">|</span> Kyiv</p>
+                    <h4 class="my-work-experience-position">Оператор call-центра <span class="my-work-experience-company">"Proxima Research International"</span></h4>
+                    <p class="my-work-experience-period">Липень 2020 - Квітень 2021 <span class="my-work-experience-divider">|</span> Київ</p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-duty">
-                            Work with the database.
+                            Робота з базами даних.
                         </li>
                         <li class="my-work-experience-duty">
-                            Clarification of address information by phone (outgoing calls).
+                            Уточнення адресної інформації по телефону (вихідні дзвінки).
                         </li>
                         <li class="my-work-experience-duty">
-                            Data synchronization.
+                            Синхронізація даних.
                         </li>
                     </ul>
                 </div>
                 <!-- company 2-->
                 <div>
-                    <h4 class="my-work-experience-position">Post office operator <span class="my-work-experience-company">LTD "Nova Poshta"</span></h4>
-                    <p class="my-work-experience-period">July 2019 - April 2020 <span class="my-work-experience-divider">|</span> Kyiv</p>
+                    <h4 class="my-work-experience-position">Оператор поштового відділення <span class="my-work-experience-company">ТОВ "Нова Пошта"</span></h4>
+                    <p class="my-work-experience-period">Липень 2019 - Квітень 2020 <span class="my-work-experience-divider">|</span> Київ</p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-duty">
-                            Issued goods and transport invoices.
+                            Оформлення товарно-транспортних накладних.
                         </li>
                         <li class="my-work-experience-duty">
-                            Entered data into the 1C database.
+                            Внесення даних в базу 1С.
                         </li>
                         <li class="my-work-experience-duty">
-                            Carried out mutual settlements with clients.
+                            Здійснення взаєморозрахунків з клієнтами.
                         </li>
                         <li class="my-work-experience-duty">
-                            Scan, palletized cargo in the department.
+                            Скан, палетування вантажу у відділенні.
                         </li>
                     </ul>
                 </div>
@@ -68,10 +69,10 @@
 
             <!-- my education-->
             <div class="my-education-section">
-                <h3 class="main-content-title">Education</h3>
-                <h4 class="my-education-univercity">Kyiv National University of Trade and Economics</h4>
-                <h5 class="my-education-speciality">Systems analysis</h5>
-                <p class="my-education-period">September 2017 - June 2021 <span class="my-education-divider">|</span> Country</p>
+                <h3 class="main-content-title">Освіта</h3>
+                <h4 class="my-education-univercity">Київський національний торговельно-економічний університет</h4>
+                <h5 class="my-education-speciality">Системний аналіз</h5>
+                <p class="my-education-period">Вересень 2017 - Червень 2021 <span class="my-education-divider">|</span> Київ</p>
             </div>
         </div>
         
@@ -80,7 +81,7 @@
 
             <!-- contacts -->
             <div class="contacts-section">
-                <h3 class="sidebar-title">Contacts</h3>
+                <h3 class="sidebar-title">Контакти</h3>
                 <div>
                     <span class="contacts-section-type">C:</span> 
                     <a class="contacts-section-link" href="tel:+380970786778">+38 097 078 67 78</a>
